@@ -155,3 +155,46 @@ Scenario: Implementation wrapper generation when IsPublic=true and IsSealed=true
     {
     }
     """
+
+
+Scenario: Forward the Obsolete attribute for the generated interface and implementation wrapper
+  Given source declaration
+    """
+    using System;
+    namespace Common.Generation;
+    [Obsolete("Use something other")]
+    public static class ObsoleteClass { }
+    """
+  And attribute usage
+    """
+    using Tum4ik.StinimGen.Attributes;
+    using Common.Generation;
+    namespace Attribute.Usage;
+    [IIFor(typeof(ObsoleteClass), WrapperClassName = "ObsoleteClassWrapper")]
+    public partial interface IObsoleteClass { }
+    """
+  When run generator
+  Then there must not be generation exception
+  And generated interface file must be
+    """
+    // <auto-generated/>
+    #nullable enable
+    namespace Attribute.Usage;
+    [global::System.CodeDom.Compiler.GeneratedCode("StinimGen", "<version>")]
+    [global::System.ObsoleteAttribute("Use something other")]
+    partial interface IObsoleteClass
+    {
+    }
+    """
+  And generated implementation file must be
+    """
+    // <auto-generated/>
+    #nullable enable
+    namespace Attribute.Usage;
+    [global::System.CodeDom.Compiler.GeneratedCode("StinimGen", "<version>")]
+    [global::System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverage]
+    [global::System.ObsoleteAttribute("Use something other")]
+    internal sealed class ObsoleteClassWrapper : IObsoleteClass
+    {
+    }
+    """
